# mmwave-flasher

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: package_macos_app.sh
src/: main.rs  mmwave.rs
ui/: main.slint
