[package]
name = "mmwave-flasher"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A tiny cute Rust UI for flashing TI classic xWR mmWave metaImage binaries."
repository = "https://github.com/mmwavelab/mmwave-flasher"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = { version = "4.5", default-features = false }
slint = { version = "1.8", default-features = true }

[build-dependencies]
slint-build = "1.8"
